# drf-tracker

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  example_env  pyproject.toml
app/: entrypoint.sh
app/apps/tracker/: admin.py  filter.py  models.py  serializers.py  tests.py  urls.py  views.py
app/apps/tracker/management/commands/: initadmin.py
app/apps/tracker/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
